# xournalpp-libadwaita-mockup

./: .gitignore  README.md  meson.build
export/: main.blp
files/: meson.build
latexeditor/: main.blp
main/: main.blp  main.js  main.json
pagetemplate/: main.blp
paperformat/: main.blp
preferences/: main.blp  main.js  main.json  main.ui
scripts/: build.py
shortcuts/: main.blp  settings
splitbutton/: main.blp  main.css  main.js
src/: actions.py  export.py  main.py  maincontent.py  marker.py  marker_config.py  meson.build  palettecolor.py  pluginentry.py  pluginmanager.py  preferences.py  scope.py  sidebarpage.py  toolbox.py  tools_config.py  uisymbols.py  util.py  window.py  xournalpp-demo.gresource.xml  xournalpp-demo.in  xournalpp-demo.py
src/gtk/: help-overlay.blp
src/ui/: export.blp  latexeditor.blp  maincontent.blp  marker.blp  pagetemplate.blp  papercolor.blp  paperformat.blp  pluginentry.blp  pluginmanager.blp  preferences.blp  preferences_audio.blp  preferences_defaults.blp  preferences_drawing.blp  preferences_input.blp  preferences_language.blp  preferences_latex.blp  preferences_load_save.blp  preferences_mouse.blp  preferences_stylus.blp  preferences_touchscreen.blp  preferences_view.blp  preferences_zoom.blp  sidebarpage.blp  toolbox.blp  window.blp
ui/: xournalpp-demo.gresource.xml
workbench/export/: settings
workbench/latexeditor/: main.blp
workbench/main/: main.blp  main.js
workbench/marker/: main.json  settings
workbench/preferences/: main.js  settings
workbench/splitbutton/: main.blp  main.js
workbench/window/: main.blp  settings
